--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Github Pages</title>
   </head>
-  <body>
+  <body style="background: lightyellow">
     <h1>Hello Github Page</h1>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
